# ransac-counter

./: README.md
ransac-client-app/: CMakeLists.txt
ransac-client-app/src/: client.cpp  client.h  editportdialog.cpp  editportdialog.h  editportdialog.ui  main.cpp  ransacclientapp.cpp  ransacclientapp.h  ransacclientapp.ui
ransac-server-app/: CMakeLists.txt
ransac-server-app/src/: addpointdialog.cpp  addpointdialog.h  addpointdialog.ui  countersettingsdialog.cpp  countersettingsdialog.h  countersettingsdialog.ui  data_message.proto  main.cpp  ransac.cpp  ransac.h  ransacserverapp.cpp  ransacserverapp.h  ransacserverapp.ui  senddialog.cpp  senddialog.h  senddialog.ui  sender.cpp  sender.h
ransac-server-app/test_files/: 1300.txt  21000.txt  330.txt  65.txt
